<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/outerlayout_height">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/innerlayout_height"
                android:orientation="horizontal">
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/horizontalScrollView">
                    <LinearLayout
                        android:id="@+id/sliderLinear"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:id="@+id/itemtext1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/itemtext1"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="30sp"
                            android:layout_margin="@dimen/layout_margin"/>
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="@dimen/divider_width"
                            android:layout_height="match_parent"
                            android:background="@android:color/black"/>
                        <TextView
                            android:id="@+id/itemtext2"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/itemtext2"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="30sp"
                            android:layout_margin="@dimen/layout_margin"/>
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="@dimen/divider_width"
                            android:layout_height="match_parent"
                            android:background="@android:color/black"/>
                        <TextView
                            android:id="@+id/itemtext3"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/itemtext3"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="30sp"
                            android:layout_margin="@dimen/layout_margin"/>
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="@dimen/divider_width"
                            android:layout_height="match_parent"
                            android:background="@android:color/black"/>
                        <TextView
                            android:id="@+id/itemtext4"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/itemtext4"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="30sp"
                            android:layout_margin="@dimen/layout_margin"/>
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="@dimen/divider_width"
                            android:layout_height="match_parent"
                            android:background="@android:color/black"/>
                        <TextView
                            android:id="@+id/itemtext5"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/itemtext5"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:textSize="30sp"
                            android:layout_margin="@dimen/layout_margin"/>
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/viewpager_height">
                <android.support.v4.view.ViewPager
                    android:id="@+id/viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/holo_red_light">
                </android.support.v4.view.ViewPager>

                <LinearLayout
                    android:id="@+id/pageind"
                    android:orientation="horizontal"
                    android:layout_width="@dimen/innerlayout_height"
                    android:layout_height="@dimen/textlayout_height"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true">
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/relativeid1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/relativeid1_height">
            <RelativeLayout
                android:id="@+id/relativeid2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/relativeid2_height"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@android:color/holo_blue_light">
                <TextView
                    android:id="@+id/textview1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/textview1"
                    android:textStyle="bold"
                    android:layout_alignParentStart="true"
                    />
                <TextView
                    android:id="@+id/textview2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/textview2"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ellipsize="middle"
                    />
                <TextView
                    android:id="@+id/textview3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/textview3"
                    android:textStyle="bold"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeid3"
                android:layout_below="@id/relativeid2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/relativeid3_height"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@android:color/holo_green_light">
                <TextView
                    android:id="@+id/textview4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_text"
                    android:textStyle="bold"
                    android:layout_alignParentStart="true"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relativeid4"
                android:layout_below="@id/relativeid3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true">


                <Button
                    android:id="@+id/Button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/redbutton"
                    android:textColor="@color/red"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true">
                </Button>
                <Button
                    android:id="@+id/Button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bluebutton"
                    android:textColor="@color/blue"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true">
                </Button>
                <Button
                    android:id="@+id/Button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/greenbutton"
                    android:textColor="@color/green"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true">
                </Button>
            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
